# dactl-mcc-plugin

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  common.am  configure.ac
src/: Makefile.am  dactl-usb1208fs-config.vapi  dactl-usb1208fs-control.vala  dactl-usb1208fs-factory.vala  dactl-usb1208fs-plugin.vala  style.css  usb1208fs-control.ui  usb1208fs.gresource.xml  usb1208fs.plugin.in
